--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leaderboard</title>
+    <title>Leaderboard project</title>
   </head>
   <body>
     <h1>Leaderboard</h1>
@@ -12,7 +12,6 @@
       <div class="scores">
         <div class="recent-scores">
           <h3>Recent Scores</h3>
-
           <input id="refresh-btn" type="button" value="Refresh" />
         </div>
         <ul class="score-list"></ul>
